# QTaskbarControl

./: CMakeLists.txt  README.md  de_skycoder42_qtaskbarcontrol.prc  de_skycoder42_qtaskbarcontrol.pri  qpm.json  qpmx.json  qtaskbarcontrol.cpp  qtaskbarcontrol.h  qtaskbarcontrol.pri  qtaskbarcontrol.qrc  qtaskbarcontrol_dummy.cpp  qtaskbarcontrol_dummy.h  qtaskbarcontrol_mac.h  qtaskbarcontrol_mac.mm  qtaskbarcontrol_p.cpp  qtaskbarcontrol_p.h  qtaskbarcontrol_win.cpp  qtaskbarcontrol_win.h  qtaskbarcontrol_x11.cpp  qtaskbarcontrol_x11.h
Example/: Example.pro  widget.cpp  widget.h  widget.ui
